# Cross-Agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
configs/: default.json  yunai.json
docs/: 长期记忆策略设计.docx  长期记忆策略设计.md
eval0/output/: chinese_seed_api_conversation.json  chinese_seed_architecture_7part_acceptance.md  chinese_seed_compact_trace.docx  chinese_seed_compact_trace.json  chinese_seed_memory_observation.md  chinese_seed_observation.sqlite3  (+2 more)
eval1/: chinese_seed_api_conversation.json  chinese_seed_compact_trace.json  chinese_seed_eval_summary.json  chinese_seed_eval_summary.md  chinese_seed_memory_observation.md  chinese_seed_observation.sqlite3  chinese_seed_round_by_round_walkthrough.md  chinese_user_only_conversation_seed.json
eval2/: chinese_seed_api_conversation.checkpoint.json  chinese_seed_api_conversation.json  chinese_seed_compact_trace.json  chinese_seed_eval_summary.json  chinese_seed_eval_summary.md  chinese_seed_memory_observation.md  chinese_seed_observation.sqlite3  chinese_seed_round_by_round_walkthrough.md
scripts/: export_chinese_seed_compact_trace.py  generate_architecture_report.py  generate_eval_observation_report.py  generate_final_technical_report.py  render_chinese_seed_roundwalkthrough.py  run_chinese_memory_architecture_demo.py  run_chinese_seed_observation.py  run_single_item_online_observation.py  summarize_chinese_seed_eval.py
tests/: test_candidate_resolver.py  test_embedding_retrieval.py  test_hybrid_extractor.py  test_memory_lifecycle.py  test_query_planner.py  test_temporal_conflicts.py
(+31 files in other folders)
