[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cross-agent"
version = "0.1.0"
description = "Cross-session long-term memory agent MVP."
requires-python = ">=3.9"
dependencies = []

[project.scripts]
cross-agent-eval = "cross_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
